Game Engine Changes

--- a/SDLHelloWorld.vcxproj
+++ b/SDLHelloWorld.vcxproj
@@ -152,15 +152,19 @@
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameInit.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Game_Window.cpp" />
     <ClCompile Include="GraphicsComponent.cpp" />
     <ClCompile Include="IGraphics.cpp" />
     <ClCompile Include="Init.cpp" />
     <ClCompile Include="IPhysics.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MessageType.cpp" />
     <ClCompile Include="PhysicsComponent.cpp" />
+    <ClCompile Include="Point.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Sound.cpp" />
+    <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Text.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Time.cpp" />
@@ -173,14 +177,18 @@
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameInit.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Game_Window.h" />
     <ClInclude Include="GraphicsComponent.h" />
     <ClInclude Include="IGraphics.h" />
     <ClInclude Include="Init.h" />
     <ClInclude Include="IPhysics.h" />
+    <ClInclude Include="MessageType.h" />
     <ClInclude Include="PhysicsComponent.h" />
+    <ClInclude Include="Point.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Sound.h" />
+    <ClInclude Include="Sprite.h" />
     <ClInclude Include="Text.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Time.h" />
